# lkwrbot

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: ros2-linter.yml
lkwrbot_control/: CMakeLists.txt  package.xml
lkwrbot_control/config/base/: lkwrbot_bno055_diagnostics.yaml  lkwrbot_controllers.yaml  lkwrbot_teleop.yaml  lkwrbot_urdf_config.yaml
lkwrbot_control/launch/: control.launch.py
lkwrbot_description/: CMakeLists.txt  package.xml
lkwrbot_description/meshes/: servomotor_STS3215.stl
lkwrbot_description/urdf/: base.common.xacro  base.control.xacro  base.materials.xacro  base.module.xacro  base.urdf.xacro  inertia_tensors.urdf.xacro  lkwrbot.xacro
lkwrbot_description_visualization/: CMakeLists.txt  README.md  package.xml
lkwrbot_description_visualization/launch/: robot_state_publisher.launch.py  robot_state_publisher_rviz.launch.py
lkwrbot_description_visualization/rviz2/: lkwrbot_config.rviz
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/lkwrbot_description/share/ament_index/resource_index/package_run_dependencies/: lkwrbot_description
ros2_ws/install/lkwrbot_description/share/ament_index/resource_index/parent_prefix_path/: lkwrbot_description
ros2_ws/install/lkwrbot_description/share/lkwrbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
ros2_ws/install/lkwrbot_description/share/lkwrbot_description/cmake/: lkwrbot_descriptionConfig-version.cmake  lkwrbot_descriptionConfig.cmake
ros2_ws/install/lkwrbot_description/share/lkwrbot_description/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/lkwrbot_description/share/lkwrbot_description/launch/: display.launch.py
ros2_ws/install/lkwrbot_description/share/lkwrbot_description/rviz/: lkwrbot.rviz
ros2_ws/install/lkwrbot_description/share/lkwrbot_description/urdf/: gazebo.xacro  lkwrbot.urdf  lkwrbot.xacro  materials.xacro  ros2_control.xacro
ros2_ws/log/: latest_build
ros2_ws/src/lkwrbot_description/: README.md
ros2_ws/src/lkwrbot_description/rviz/: lkwrbot.rviz
ros2_ws/src/lkwrbot_description/urdf/: gazebo.xacro  lkwrbot.urdf  lkwrbot.xacro
