<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lkwrbot_control</name>
  <version>0.0.1</version>
  <description>Control nodes for the LKWrbot robot</description>
  <maintainer email="6249544+RbSCR@users.noreply.github.com">RbSCRr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lkwrbot_description</depend>

  <exec_depend>bno055_hardware_interface</exec_depend>
  <!-- Aditya Kamath (Kamath Robotics) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sts_hardware_interface</exec_depend>
  <!-- Aditya Kamath (Kamath Robotics) -->
  <exec_depend>xacro</exec_depend>

  <!-- TODO check/add other dependencies-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
